# BaconAPI

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
cmake/: Options.cmake  Strip.cmake
include/BaconAPI/: ANSI.h  ArgumentHandler.h  BuiltInArguments.h  Configuration.h  Logger.h  Memory.h  MessageBox.h  Number.h  OperatingSystem.h  Prompt.h  String.h  StringManager.h  StringSafeFormat.h  Thread.h  Threads.h  Translations.h  User.h  WideString.h
include/BaconAPI/Debugging/: Assert.h  Stack.h  StaticAssert.h
include/BaconAPI/Hacks/: Windows.h
include/BaconAPI/Internal/: Architecture.h  Boolean.h  CPlusPlusSupport.h  Compiler.h  Hacks.h  OperatingSystem.h  PlatformSpecific.h
include/BaconAPI/Math/: Bitwise.h
include/BaconAPI/Storage/: DynamicArray.h  DynamicDictionary.h
source/: ANSI.c  ArgumentHandler.c  Configuration.c  Error.xpm  Information.xpm  Logger.c  Memory.c  MessageBox.c  Number.c  OperatingSystem.c  Prompt.c  Question.xpm  String.c  StringImplementation.c  StringImplementation.h  StringManager.c  Thread.c  Threads.c  Translations.c  User.c  Warning.xpm  WideString.c
source/Debugging/: Assert.c  Stack.c
source/Hacks/: Windows.c
source/Storage/: DynamicArray.c  DynamicDictionary.c
test/: ANSI.c  Architecture.c  ArgumentHandler.c  CMakeLists.txt  Compiler.c  Configuration.c  DynamicArray.c  DynamicDictionary.c  Main.c  Memory.c  MessageBox.c  Number.c  OperatingSystem.c  Prompt.c  Stack.c  String.c  StringHelper.h  StringManager.c  TestHeader.h  Thread.c  Translations.c  User.c  WideString.c
test/Internal/: Entry.c
test/normal/: CMakeLists.txt  Main.c
test/threads/: CMakeLists.txt  Main.c
